View Issue Details

IDProjectCategoryView StatusLast Update
0022757Open CASCADEOCCT:Shape Healingpublic2012-03-29 17:26
ReporterepaAssigned Tobugmaster  
PrioritynormalSeveritycrash 
Status closedResolutionfixed 
Product Version6.5.2 
Target Version6.5.3Fixed in Version6.5.3 
Summary0022757: Exception in ShapeHealing
DescriptionException is raised if fixshape is called for attached shape
Steps To Reproducerestore BUC60887.brep a
fixshape res a 0.01

result:
An exception was caught 0055A778 : Standard_NumericError: FLT MULTIPLE TRAPS (possible overflow in conversion of double to integer)
** Exception ** 0055A778 : Standard_NumericError: FLT MULTIPLE TRAPS (possible overflow in conversion of double to integer)
TagsNo tags attached.
Test case numberchl 934 L9

Attached Files

  • BUC60887.brep (398,671 bytes)
  • L9 (572 bytes)

Activities

epa

2011-10-10 15:07

developer  

BUC60887.brep (398,671 bytes)

dbv

2011-11-22 12:23

developer   ~0018600

Shape contains a tremendous values so exception raised when trying to convert Standard_Real to Standard_Integer.
In ShapeAnalysis::AdjustByPeriod now using "floor" for rounding instead of conversion to Standard_Integer.
It is necessary to check how it affected performance.

branch http://svn/svn/occt/branches/OCC22757 is ready to be reviewed

abv

2011-12-01 09:25

manager   ~0018681

I have no remarks on the change; please test

apn

2011-12-05 13:52

administrator   ~0018740

Dear BugMaster,
      Workbench apn-OCC22757-occt was created from SVN branch http://svn/svn/occt/branches/OCC22757 [^]
     (and apn-OCC22757-products from trunk) and compiled on Linux platform.
   
      Test case for this fix is

 chl 934 L9
     
      Test is OK.

 
      There are not regressions in apn-OCC22757-products regarding to KAS:dev:products-652-opt.
      
      See results in /QADisk/occttests/results/KAS/dev/apn-OCC22757-products_01122011/lin
      See reference results in /QADisk/occttests/results/KAS/dev/products-652-opt_23092011/lin
      See test cases in /QADisk/occttests/tests/ED

apn

2011-12-05 13:54

administrator  

L9 (572 bytes)

bugmaster

2011-12-08 17:23

administrator   ~0018799

Integration into trunk of occt repository

Date: 2011-12-08 17:15:13 +0400 (Thu, 08 Dec 2011)
New Revision: 9689

Modified:
   trunk/src/ShapeAnalysis/ShapeAnalysis.cxx

Related Changesets

occt: master 9248974c

2011-12-08 13:15:13

dbv


Committer: bugmaster Details Diff
0022757: Exception in ShapeHealing Affected Issues
0022757
mod - src/ShapeAnalysis/ShapeAnalysis.cxx Diff File

Issue History

Date Modified Username Field Change
2011-10-10 15:07 epa New Issue
2011-10-10 15:07 epa Assigned To => abv
2011-10-10 15:07 epa File Added: BUC60887.brep
2011-11-15 13:44 abv Assigned To abv => dbv
2011-11-15 13:44 abv Status new => assigned
2011-11-22 12:23 dbv Note Added: 0018600
2011-11-22 12:23 dbv Assigned To dbv => abv
2011-11-22 12:23 dbv Status assigned => resolved
2011-12-01 09:25 abv Note Added: 0018681
2011-12-01 09:25 abv Status resolved => reviewed
2011-12-01 09:43 abv Assigned To abv => dbv
2011-12-01 13:46 apn Test case number => chl 934 L9
2011-12-05 13:52 apn Note Added: 0018740
2011-12-05 13:54 apn File Added: L9
2011-12-05 13:54 apn Status reviewed => tested
2011-12-08 17:23 bugmaster Note Added: 0018799
2011-12-08 17:23 bugmaster Status tested => verified
2011-12-08 17:23 bugmaster Resolution open => fixed
2011-12-23 11:17 bugmaster Target Version => 6.5.3
2012-03-29 17:26 bugmaster Changeset attached => occt master 9248974c