0022757: Exception in ShapeHealing